Fixes for a11y - mainly contrast, a couple of alt '' tags. (#302)

--- a/app/assets/stylesheets/components/_aside.scss
+++ b/app/assets/stylesheets/components/_aside.scss
@@ -7,9 +7,6 @@
 		color: $ncce-white;
 	}
 
-	&__text--dark {
-		color: $ncce-grey-manatee;
-	}
 	&__title {
 		color: $ncce-white;
 		font-weight: 700;
